# ProPCA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: example.bed  example.bim  example.fam  example_evals.txt  example_evecs.txt  par.txt
include/: arguments.h  genotype.h  helper.h  mailman.h  storage.h
misc/filters/: README.md  ukb.bim
misc/selection/: README.md  galinsky.py  process_propca_stat.R  propca_stat.py  select.py
misc/simulator/: README.md  simulate.cpp
src/: fastppca.cpp  genotype.cpp  propca.cpp  storage.cpp
